# Detective_J

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: run.yml
evaluation/: __init__.py  evaluate.py
src/multimodal_evidence_review/: __init__.py  cli.py  config.py  factory.py  logging_config.py
src/multimodal_evidence_review/application/: __init__.py  review_service.py
src/multimodal_evidence_review/domain/: enums.py  models.py
src/multimodal_evidence_review/infrastructure/: __init__.py  csv_repository.py  image_repository.py  openai_vision.py
src/multimodal_evidence_review/validation/: __init__.py  evidence.py  output.py  risk.py
tests/integration/: test_review_service.py
tests/unit/: test_csv_repository.py  test_evidence_validator.py  test_output.py  test_risk.py
